# async-coro-runner

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  example.py  main.py  pyproject.toml  run_tests.sh
.github/workflows/: packaging.yml  publishing.yml  python-package.yml  tests-runner.yml
coro_runner/: __init__.py  backend.py  runner.py  test_runner.py  tests.py  utils.py
coro_runner.egg-info/: PKG-INFO
coro_runner/backend/: __init__.py  base.py  redis.py  types.py
coro_runner/docs/: docs.md
